<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SenderActivity">


    <Button
        android:id="@+id/notifyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:layout_marginLeft="200dp"
        android:layout_marginStart="200dp"
        android:text="@string/queryButton" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:layout_marginLeft="100dp"
        android:layout_marginStart="100dp"
        android:text="@string/clearButton" />

    <RadioGroup
        android:id="@+id/optionsRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="265dp"
        android:layout_marginLeft="120dp"
        android:layout_marginStart="120dp" >

        <RadioButton
            android:id="@+id/optRadioButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/optRadioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RadioGroup>

    <TextView
        android:id="@+id/view_query"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_centerHorizontal="true"
        android:text="@string/queryDetail"
        android:textSize="21sp"/>

    <TextView
        android:id="@+id/opt1TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="265dp"
        android:layout_marginLeft="180dp"
        android:layout_marginStart="180dp"
        android:text="@string/notifOption1"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/opt2TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="180dp"
        android:layout_marginStart="180dp"
        android:text="@string/notifOption2"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/senderHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:text="@string/senderHead"
        android:textSize="35sp"/>

    <TextView
        android:id="@+id/senderDetail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_centerHorizontal="true"
        android:text="@string/senderDetail"
        android:textSize="12sp"/>

</RelativeLayout>