<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <Button
        android:id="@+id/sendButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:padding="10dp"
        android:text="@string/senderLogin" />

    <Button
        android:id="@+id/recButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@+id/sendButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:text="@string/receiverLogin" />

    <TextView
        android:id="@+id/loginHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="35sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/loginScreen" />

    <TextView
        android:id="@+id/loginDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:text="@string/welcomeText" />

</RelativeLayout>