<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReceiverActivity">

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_centerHorizontal="true"
        android:text="@string/submitButton" />

    <TextView
        android:id="@+id/notifDisplay"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp" />

    <EditText
        android:id="@+id/inputEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="245dp"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:textAlignment="center"
        android:hint="@string/hintText1"/>

    <TextView
        android:id="@+id/receiverHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:text="@string/receiverHead"
        android:textSize="35sp"/>

    <TextView
        android:id="@+id/receiverDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_centerHorizontal="true"
        android:text="@string/receiverDetail"
        android:textSize="12sp"/>

</RelativeLayout>